--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,18 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "@reduxjs/toolkit": "^2.6.1",
+    "antd": "^5.3.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "next": "15.2.3",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
